package com.manuelpuchner.backend.asset.entity;

public enum AssetClass {
    FUND,
    STOCK,
    DERIVATIVE,
    CRYPTO
}
