package com.manuelpuchner.backend.transaction.entity;

public enum AccountType {
    DEFAULT
}
