package com.manuelpuchner.backend.transaction.entity;

public enum Category {
    TRADING,
    CASH,
    DELIVERY
}
